--- a/estilos.css
+++ b/estilos.css
@@ -9,18 +9,18 @@
 }
 
 /*Importar tipografía de google fonts vía @import (sin etiquetas <style>)*/
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arima&family=Open+Sans&display=swap');
 /*Esto me permite utilizar la tipografía en todo el contenido de body. Como standard vamos a usar la 100*/
 
 body {
     /*Declaración de tipografía*/
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     /*Declaración de peso de Tipografía*/
     font-weight: 100;
     /*Declaración de color de fondo del body*/
-    background-color: black;
+    background-color: rgb(100, 100, 100);
     /*Declaración del color de la tipografía en el body*/
-    color: white;
+    color: rgb(206, 206, 206);
 }
 
 /*ESTILOS DE CUADRADOS DE COLORES*/
@@ -28,37 +28,37 @@ body {
 /*Este es un id único en el HTML, representado por #nombre*/
 /*Este color está declarado en #Hex*/
 #color1 {
-    background-color: #E03616;
+    background-color: #00ffff;
 }
 /*Este color está declarado con una palabra clave*/
 #color2 {
-    background-color: yellowgreen;
+    background-color: #00a8a8;
 }
 /*Este color está declarado con valores RGB (XX, XX, XX)*/
 #color3 {
-    background-color: rgb(23, 193, 223);
+    background-color: #00ffff;
 }
 /*Este color está declarado en RGB, y tiene transparencia de 0.705*/
 #color4 {
-    background-color: rgba(251, 255, 0, 0.705);
+    background-color: #00a8a8;
 }
 
 /*ESTILOS DE BARRA DE NAVEGACIÓN*/
 nav {
     /*Color de texto declarado en #Hex*/
-    color: #ffffff;
+    color: #000000;
 }
 
 /*ESTILOS LINKS EN BARRA DE NAVEGACIÓN*/
 nav a{
     /*Color te texto*/
-    color: #ffffff;
+    color: #1900fa;
     /*Decoración de texto: subrayado | tachado | etc.*/
     text-decoration: none;
     /*Tipografía*/
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     /*Peso de la tipografía (tiene que estar linkeada la variable)*/
-    font-weight: 700;
+    font-weight: 400;
     /*Espaciado interno*/
     padding: 25px;
     /*Tiempo de transición animaciones de hover (mirar abajo)*/
@@ -70,7 +70,7 @@ nav a{
 /*Cambios al pasar el mouse sobre el elemento (hover)*/
 nav a:hover{
     /*Cambio de color*/
-    color: #7c7c7c;
+    color: #000000;
 }
 
 /*ESTILOS LOGO BARRA DE NAVEGACIÓN*/
@@ -117,7 +117,7 @@ nav a:hover{
 /*ESTILOS DEL BOTON*/
 .btn {
     /*Color de fondo*/
-    background-color: rgba(255, 0, 0, 0.664);
+    background-color: rgb(21, 132, 34);
     /*Color de tipografía*/
     color: white;
     /*Decoracion del texto*/
@@ -139,7 +139,7 @@ nav a:hover{
 /*Al pasar el mouse por arriba*/
 .btn:hover {
     /*Cambio de color de fondo*/
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(9, 175, 48);
 }
 
 /*ESTRUCTURA de la plantilla | Tocar bajo su propio riesgo*/
