--- a/estilos.css
+++ b/estilos.css
@@ -46,13 +46,13 @@ body {
 /*ESTILOS DE BARRA DE NAVEGACIÓN*/
 nav {
     /*Color de texto declarado en #Hex*/
-    color: #000000;
+    color: #700202;
 }
 
 /*ESTILOS LINKS EN BARRA DE NAVEGACIÓN*/
 nav a{
     /*Color te texto*/
-    color: #1900fa;
+    color: #fa0000;
     /*Decoración de texto: subrayado | tachado | etc.*/
     text-decoration: none;
     /*Tipografía*/
